# gr-ad2

./: .gitignore  AnalogIn_Record.grc  AnalogIn_Record_FM_Demod.grc  AnalogIn_Shift.grc  AnalogOut_Custom.grc  AnalogOut_Play_AM_Mod.grc  AnalogOut_Sine.grc  LICENSE  README.md  digilent_analog_discovery_2.tree.yml
GNURadio_v37/: AnalogIn_Record_FM_Demod.grc  AnalogIn_Shift.grc  AnalogOut_Play.grc
GNURadio_v37/gr-AD2_AnalogIn_Shift/: CMakeLists.txt  MANIFEST.md
GNURadio_v37/gr-AD2_AnalogOut_Custom/: CMakeLists.txt
GNURadio_v37/gr-AD2_AnalogOut_Play/: CMakeLists.txt  MANIFEST.md
GNURadio_v38/: AnalogIn_Record_FM_Demod.grc  CMakeLists.txt  MANIFEST.md  digilent_analog_discovery_2_analogin_record.block.yml
GNURadio_v38/apps/: CMakeLists.txt
GNURadio_v38/docs/: CMakeLists.txt  README.ad2
GNURadio_v38/examples/: AnalogIn_Record.grc  AnalogIn_Record_FM_Demod.grc  AnalogOut_Play.grc  AnalogOut_Play_AM_Mod.grc  AnalogOut_Sine.grc
GNURadio_v38/gr-AD2_AnalogIn_Record/: CMakeLists.txt  MANIFEST.md
GNURadio_v38/grc/: CMakeLists.txt  ad2_AD2_AnalogIn_Record_f.block.yml  ad2_AD2_AnalogOut_Play_f.block.yml  ad2_AD2_AnalogOut_Sine_i.block.yml
GNURadio_v38/lib/: CMakeLists.txt
GNURadio_v38/python/: AD2_AnalogIn_Record_f.py  AD2_AnalogOut_Play_f.py  AD2_AnalogOut_Sine_i.py  CMakeLists.txt  __init__.py
GNURadio_v38/swig/: CMakeLists.txt  ad2_swig.i
gr-AD2_AnalogIn_Record/: CMakeLists.txt  MANIFEST.md
gr-AD2_AnalogIn_Record/docs/: README.AD2_AnalogIn_Record
gr-AD2_AnalogIn_Record/grc/: AD2_AnalogIn_Record_AD2_AnalogIn_Record_f.xml  CMakeLists.txt
gr-AD2_AnalogIn_Record/lib/: CMakeLists.txt  qa_AD2_AnalogIn_Record.cc
gr-AD2_AnalogIn_Record/python/: AD2_AnalogIn_Record_f.py  CMakeLists.txt  qa_AD2_AnalogIn_Record_f.py
gr-AD2_AnalogIn_Shift/docs/: README.AD2_AnalogIn_Shift
gr-AD2_AnalogIn_Shift/grc/: AD2_AnalogIn_Shift_AD2_AnalogIn_Shift_f.xml  CMakeLists.txt
gr-AD2_AnalogIn_Shift/lib/: qa_AD2_AnalogIn_Shift.cc  qa_AD2_AnalogIn_Shift.h  test_AD2_AnalogIn_Shift.cc
gr-AD2_AnalogIn_Shift/python/: AD2_AnalogIn_Shift_f.py  __init__.py
gr-AD2_AnalogOut_Custom/: MANIFEST.md
gr-AD2_AnalogOut_Custom/docs/: README.AD2_AnalogOut_Custom
gr-AD2_AnalogOut_Custom/grc/: AD2_AnalogOut_Custom_AD2_AnalogOut_Custom_f.xml  CMakeLists.txt
gr-AD2_AnalogOut_Custom/lib/: CMakeLists.txt  qa_AD2_AnalogOut_Custom.cc  qa_AD2_AnalogOut_Custom.h
gr-AD2_AnalogOut_Custom/python/: AD2_AnalogOut_Custom_f.py  __init__.py
gr-AD2_AnalogOut_Custom/swig/: AD2_AnalogOut_Custom_swig.i
gr-AD2_AnalogOut_Play/docs/: README.AD2_AnalogOut_Play
gr-AD2_AnalogOut_Play/grc/: AD2_AnalogOut_Play_AD2_AnalogOut_Play_f.xml
gr-AD2_AnalogOut_Play/lib/: CMakeLists.txt  test_AD2_AnalogOut_Play.cc
gr-AD2_AnalogOut_Play/python/: AD2_AnalogOut_Play_f.py  CMakeLists.txt  __init__.py  qa_AD2_AnalogOut_Play_f.py
gr-AD2_AnalogOut_Play/swig/: CMakeLists.txt
gr-AD2_AnalogOut_Sine/: CMakeLists.txt  MANIFEST.md
gr-AD2_AnalogOut_Sine/docs/: README.AD2_AnalogOut_Sine
gr-AD2_AnalogOut_Sine/grc/: AD2_AnalogOut_Sine_AD2_AnalogOut_Sine_i.xml  CMakeLists.txt
gr-AD2_AnalogOut_Sine/lib/: CMakeLists.txt  qa_AD2_AnalogOut_Sine.cc  qa_AD2_AnalogOut_Sine.h  test_AD2_AnalogOut_Sine.cc
(+83 files in other folders)
